--- a/wp-content/litespeed/css/d24b227abff7d842c4508bd1fbcc9571.css
+++ b/wp-content/litespeed/css/d24b227abff7d842c4508bd1fbcc9571.css
@@ -6,7 +6,7 @@
     --e-global-color-37a0295: #000233;
     --e-global-color-d5a1089: #9e9e9e;
     --e-global-color-d40664e: #041423;
-    --e-global-color-35fee04: #080808;
+    --e-global-color-35fee04: #32273d;
     --e-global-color-67c7c58: #FFFFFFB8;
     --e-global-color-b461437: #071316;
     --e-global-typography-primary-font-family: "Gilroy";
